SCTCD-787 added setting feature 'max-width' for images only when they do not have width attributes, cause it prevents MSIE from showing horizontal scrollbar

--- a/gui/src/components/Page/Page.less
+++ b/gui/src/components/Page/Page.less
@@ -73,7 +73,9 @@
             .ordered-list();
         }
         img {
-            max-width: 100%;
+            &:not([width]) {
+                max-width: 100%;
+            }
             &.sdl-expandable-image {
                 transition: box-shadow 0.3s ease-out;
                 &:hover {
